<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/item_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_corner_background"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:text="@string/category"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/quatityTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/quantity"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/item_name"
            app:layout_constraintTop_toBottomOf="@+id/item_name" />

        <TextView
            android:id="@+id/quantityTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_value"
            app:layout_constraintBottom_toBottomOf="@+id/quatityTxt"
            app:layout_constraintStart_toEndOf="@+id/quatityTxt"
            app:layout_constraintTop_toTopOf="@+id/quatityTxt" />

        <TextView
            android:id="@+id/priceTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/price"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/quatityTxt"
            app:layout_constraintTop_toBottomOf="@+id/quatityTxt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_value"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/priceTxt"
            app:layout_constraintStart_toEndOf="@+id/priceTxt"
            app:layout_constraintTop_toTopOf="@+id/priceTxt" />

        <Button
            android:id="@+id/iconButton"
            style="?attr/materialIconButtonFilledStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/deleteBtn"
            android:contentDescription="@string/delete_button"
            app:icon="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>